feat(index.html): add nav and anchors to sections
- add ids for sections
- add nav with links for every section

--- a/index.html
+++ b/index.html
@@ -12,9 +12,31 @@
       <main class="main cv">
         <div class="sidebar">
           <h1 class="cv-title">Alexandr Turdiyev</h1>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#about" class="nav__link">About</a>
+              </li>
+              <li class="nav__item">
+                <a href="#skills" class="nav__link">Skills</a>
+              </li>
+              <li class="nav__item">
+                <a href="#education" class="nav__link">Education</a>
+              </li>
+              <li class="nav__item">
+                <a href="#work" class="nav__link">Work Experience</a>
+              </li>
+              <li class="nav__item">
+                <a href="#hobbies" class="nav__link">Hobbies</a>
+              </li>
+              <li class="nav__item">
+                <a href="#contact" class="nav__link">Contact</a>
+              </li>      
+            </ul>
+          </nav>
         </div>
         <div class="cv-info">
-          <section class="section about">
+          <section id="about" class="section about">
             <h2 class="section__title">About</h2>
             <ul class="section__list">
               <li class="section__list-item">
@@ -37,7 +59,7 @@
           </section>
           <!-- [END] about -->
 
-          <section class="section skills">
+          <section id="skills" class="section skills">
             <h2 class="section__title">Skills</h2>
 
             <h3 class="list-title">Programming. Markup and Styling</h3>
@@ -107,7 +129,7 @@
           </section>
           <!-- [END] skills -->
 
-          <section class="section education">
+          <section id="education" class="section education">
             <h2 class="section__title">Education</h2>
 
             <h3 class="list-title">IT</h3>
@@ -138,7 +160,7 @@
           </section>
           <!-- [END] education -->
 
-          <section class="section work">
+          <section id="work" class="section work">
             <h2 class="section__title">Work Experience</h2>
 
             <h3 class="list-title">IT</h3>
@@ -186,7 +208,7 @@
           </section>
           <!-- [END] work -->
 
-          <section class="section hobbies">
+          <section id="hobbies" class="section hobbies">
             <h2 class="section__title">Hobbies</h2>
             <ul class="section__list">
               <li class="section__list-item">Sports</li>
@@ -199,7 +221,7 @@
           </section>
           <!-- [END] hobbies -->
 
-          <section class="section contact">
+          <section id="contact" class="section contact">
             <h2 class="section__title">Contact</h2>
             <ul class="section__list">
               <li class="section__list-item">
