feat(index.html): add cv profile photo and move cv-title to cv-profile wrapper

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
       <header class="header"></header>
       <main class="main cv">
         <div class="sidebar">
-          <h1 class="cv-title">Alexandr Turdiyev</h1>
+          <div class="cv-profile-wrapper">
+            <div class="cv__photo-frame">
+              <img class="cv__photo-img" src="assets/images/alexandr-turdiyev_photo_256px.jpg" alt="photo-img" >
+            </div>
+            <h1 class="cv-title cv__profile-name">Alexandr Turdiyev</h1>
+          </div>
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
