feat(index.html): add section__content block for some content
- add block to create indents

--- a/index.html
+++ b/index.html
@@ -43,228 +43,245 @@
         <div class="cv-info">
           <section id="about" class="section about">
             <h2 class="section__title">About</h2>
-            <ul class="section__list">
-              <li class="section__list-item">
-                I strive to create high-quality web applications that exceed
-                user expectations.
-              </li>
-              <li class="section__list-item">
-                <b>My goal</b> is to ensure a positive interaction between
-                humans and the digital world. I prioritize modern and intuitive
-                interfaces, clean and maintainable code.
-              </li>
-              <li class="section__list-item">
-                Attention to detail, smart technology choices and implementation
-                strategies, a personalized approach to clients, and teamwork
-                skills are my way of life.Attention to detail, smart technology
-                choices and implementation strategies, a personalized approach
-                to clients, and teamwork skills are my way of life.
-              </li>
-            </ul>
+            <div class="section__content">
+              <ul class="section__list">
+                <li class="section__list-item">
+                  I strive to create high-quality web applications that exceed
+                  user expectations.
+                </li>
+                <li class="section__list-item">
+                  <b>My goal</b> is to ensure a positive interaction between
+                  humans and the digital world. I prioritize modern and intuitive
+                  interfaces, clean and maintainable code.
+                </li>
+                <li class="section__list-item">
+                  Attention to detail, smart technology choices and implementation
+                  strategies, a personalized approach to clients, and teamwork
+                  skills are my way of life.Attention to detail, smart technology
+                  choices and implementation strategies, a personalized approach
+                  to clients, and teamwork skills are my way of life.
+                </li>
+              </ul>
+            </div>
           </section>
           <!-- [END] about -->
 
           <section id="skills" class="section skills">
             <h2 class="section__title">Skills</h2>
 
-            <h3 class="list-title">Programming. Markup and Styling</h3>
-            <ul class="section__list">
-              <li class="section__list-item">HTML5</li>
-              <li class="section__list-item">CSS3 / SASS/SCSS / Bootstrap</li>
-              <li class="section__list-item">JavaScript</li>
-              <li class="section__list-item">BEM Methodology</li>
-            </ul>
+            <div class="section__content">
+              <h3 class="list-title">Programming. Markup and Styling</h3>
+              <ul class="section__list">
+                <li class="section__list-item">HTML5</li>
+                <li class="section__list-item">CSS3 / SASS/SCSS / Bootstrap</li>
+                <li class="section__list-item">JavaScript</li>
+                <li class="section__list-item">BEM Methodology</li>
+              </ul>
+  
+              <h3 class="list-title">Build Tools</h3>
+              <ul class="section__list">
+                <li class="section__list-item">Webpack / Gulp</li>
+              </ul>
+  
+              <h3 class="list-title">Content Management Systems (CMS)</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  WordPress: Custom theme development
+                </li>
+              </ul>
+  
+              <h3 class="list-title">Version Control</h3>
+              <ul class="section__list">
+                <li class="section__list-item">Git / GitHub</li>
+              </ul>
+  
+              <h3 class="list-title">Web Application Deployment</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  Selecting a server that meets application requirements
+                </li>
+                <li class="section__list-item">
+                  Acquiring and registering a domain
+                </li>
+                <li class="section__list-item">
+                  Working with popular hosting services
+                </li>
+              </ul>
+  
+              <h3 class="list-title">Design</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  FIGMA / Adobe Photoshop / Adobe Illustrator
+                </li>
+              </ul>
+  
+              <h3 class="list-title">Development Environments</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  Microsoft Visual Studio Code / JetBrains WebStorm
+                </li>
+              </ul>
+  
+              <h3 class="list-title">Database Management</h3>
+              <ul class="section__list">
+                <li class="section__list-item">MySQL / PhpMyAdmin</li>
+              </ul>
+  
+              <h3 class="list-title">Languages</h3>
+              <ul class="section__list">
+                <li class="section__list-item">Russian: native</li>
+                <li class="section__list-item">
+                  English: B1 (reading proficiency)
+                </li>
+              </ul>
+            </div>
 
-            <h3 class="list-title">Build Tools</h3>
-            <ul class="section__list">
-              <li class="section__list-item">Webpack / Gulp</li>
-            </ul>
 
-            <h3 class="list-title">Content Management Systems (CMS)</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                WordPress: Custom theme development
-              </li>
-            </ul>
-
-            <h3 class="list-title">Version Control</h3>
-            <ul class="section__list">
-              <li class="section__list-item">Git / GitHub</li>
-            </ul>
-
-            <h3 class="list-title">Web Application Deployment</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                Selecting a server that meets application requirements
-              </li>
-              <li class="section__list-item">
-                Acquiring and registering a domain
-              </li>
-              <li class="section__list-item">
-                Working with popular hosting services
-              </li>
-            </ul>
-
-            <h3 class="list-title">Design</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                FIGMA / Adobe Photoshop / Adobe Illustrator
-              </li>
-            </ul>
-
-            <h3 class="list-title">Development Environments</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                Microsoft Visual Studio Code / JetBrains WebStorm
-              </li>
-            </ul>
-
-            <h3 class="list-title">Database Management</h3>
-            <ul class="section__list">
-              <li class="section__list-item">MySQL / PhpMyAdmin</li>
-            </ul>
-
-            <h3 class="list-title">Languages</h3>
-            <ul class="section__list">
-              <li class="section__list-item">Russian: native</li>
-              <li class="section__list-item">
-                English: B1 (reading proficiency)
-              </li>
-            </ul>
           </section>
           <!-- [END] skills -->
 
           <section id="education" class="section education">
             <h2 class="section__title">Education</h2>
 
-            <h3 class="list-title">IT</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                Almaty Technical College / Faculty of Computing and Software /
-                Specialty: Software Technician.
-              </li>
-            </ul>
+            <div class="section__content">
+              <h3 class="list-title">IT</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  Almaty Technical College / Faculty of Computing and Software /
+                  Specialty: Software Technician.
+                </li>
+              </ul>
+  
+              <h3 class="list-title">
+                Industrial Automation and Electrical Drive Control
+              </h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  SIEMENS: Practical course on software development for SIMATIC
+                  S7-300, S7-400, S7-1200, S7-1500.
+                </li>
+                <li class="section__list-item">
+                  Schneider Electric: Practical course on software development for
+                  Modicon M221.
+                </li>
+                <li class="section__list-item">
+                  VACON: Practical course on working with VACON (Danfoss) 100 FLOW
+                  Variable Frequency Drive.
+                </li>
+              </ul>
+            </div>
 
-            <h3 class="list-title">
-              Industrial Automation and Electrical Drive Control
-            </h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                SIEMENS: Practical course on software development for SIMATIC
-                S7-300, S7-400, S7-1200, S7-1500.
-              </li>
-              <li class="section__list-item">
-                Schneider Electric: Practical course on software development for
-                Modicon M221.
-              </li>
-              <li class="section__list-item">
-                VACON: Practical course on working with VACON (Danfoss) 100 FLOW
-                Variable Frequency Drive.
-              </li>
-            </ul>
           </section>
           <!-- [END] education -->
 
           <section id="work" class="section work">
             <h2 class="section__title">Work Experience</h2>
 
-            <h3 class="list-title">IT</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                <b>Developed</b> a <b>custom theme</b> for <b>WordPress</b> for
-                a <b>client</b>.
-              </li>
-              <li class="section__list-item">
-                <b>Developed</b> and <b>published</b> the <b>website</b>
-                https://farizmamedovinteriors.com.
-              </li>
-              <li class="section__list-item">
-                <b>Example code</b> for the background slider image transition
-                on the main page of the website
-                https://farizmamedovinteriors.com:
-                <code>
-                  function switchImage() {
-                  images[currentIndex].classList.remove('bg-slider__img--active');
-                  currentIndex = (currentIndex + 1) % images.length;
-                  images[currentIndex].classList.add('bg-slider__img--active');
-                  } setInterval(switchImage, delay);
-                </code>
-                This code snippet demonstrates the functionality for changing
-                background images in a slider on the homepage of the mentioned
-                website. The switchImage function removes the active class from
-                the current image, increments the index, and adds the active
-                class to the next image. The function is called at regular
-                intervals specified by the delay variable using setInterval.
-              </li>
-            </ul>
+            <div class="section__content">
+              <h3 class="list-title">IT</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  <b>Developed</b> a <b>custom theme</b> for <b>WordPress</b> for
+                  a <b>client</b>.
+                </li>
+                <li class="section__list-item">
+                  <b>Developed</b> and <b>published</b> the <b>website</b>
+                  https://farizmamedovinteriors.com.
+                </li>
+                <li class="section__list-item">
+                  <b>Example code</b> for the background slider image transition
+                  on the main page of the website
+                  https://farizmamedovinteriors.com:
+                  <code>
+                    function switchImage() {
+                    images[currentIndex].classList.remove('bg-slider__img--active');
+                    currentIndex = (currentIndex + 1) % images.length;
+                    images[currentIndex].classList.add('bg-slider__img--active');
+                    } setInterval(switchImage, delay);
+                  </code>
+                  This code snippet demonstrates the functionality for changing
+                  background images in a slider on the homepage of the mentioned
+                  website. The switchImage function removes the active class from
+                  the current image, increments the index, and adds the active
+                  class to the next image. The function is called at regular
+                  intervals specified by the delay variable using setInterval.
+                </li>
+              </ul>
+  
+              <h3 class="list-title">Industrial Automation</h3>
+              <ul class="section__list">
+                <li class="section__list-item">
+                  Worked as a Service Engineer and an
+                  <b>Automated Control Systems Engineer</b> in a company that
+                  supplies and services equipment at major enterprises for oil,
+                  <b>gold</b>, copper, uranium, and other mineral extraction in
+                  the Republic of Kazakhstan. Target sites include Západnaya
+                  Prorva Field, <b>KAZ Minerals Aktogay</b>, INKAI
+                  (<b>KAZATOMPROM</b>) and others.
+                </li>
+              </ul>
+            </div>
 
-            <h3 class="list-title">Industrial Automation</h3>
-            <ul class="section__list">
-              <li class="section__list-item">
-                Worked as a Service Engineer and an
-                <b>Automated Control Systems Engineer</b> in a company that
-                supplies and services equipment at major enterprises for oil,
-                <b>gold</b>, copper, uranium, and other mineral extraction in
-                the Republic of Kazakhstan. Target sites include Západnaya
-                Prorva Field, <b>KAZ Minerals Aktogay</b>, INKAI
-                (<b>KAZATOMPROM</b>) and others.
-              </li>
-            </ul>
           </section>
           <!-- [END] work -->
 
           <section id="hobbies" class="section hobbies">
             <h2 class="section__title">Hobbies</h2>
-            <ul class="section__list">
-              <li class="section__list-item">Sports</li>
-              <li class="section__list-item">
-                Development of electronic devices based on STM32
-                microcontrollers
-              </li>
-              <li class="section__list-item">Traveling</li>
-            </ul>
+
+            <div class="section__content">
+              <ul class="section__list">
+                <li class="section__list-item">Sports</li>
+                <li class="section__list-item">
+                  Development of electronic devices based on STM32
+                  microcontrollers
+                </li>
+                <li class="section__list-item">Traveling</li>
+              </ul>
+            </div>
           </section>
           <!-- [END] hobbies -->
 
           <section id="contact" class="section contact">
             <h2 class="section__title">Contact</h2>
-            <ul class="section__list">
-              <li class="section__list-item">
-                E-mail:
-                <a href="mailto:alexandr.turdiyev@gmail.com">
-                  alexandr.turdiyev@gmail.com
-                </a>
-              </li>
-              <li class="section__list-item">
-                WhatsApp:
-                <a href="whatsapp://send?phone=77057702577&text=Привет">
-                  +7 705 770 25 77
-                </a>
-              </li>
-              <li class="section__list-item">
-                Telegram:
-                <a href="https://t.me/alexandr_turdiyev">
-                  @alexandr_turdiyev
-                </a>
-              </li>
-              <li class="section__list-item">
-                Discord:
-                <a href="https://discordapp.com/users/955026775396741182/">
-                  @alexandr_turdiyev
-                </a>
-                /
-                <a href="https://discordapp.com/users/955026775396741182/">
-                  Alex (@AlexandrTurdiyev)
-                </a>
-                - RS SCHOOL Server username
-              </li>
-              <li class="section__list-item">
-                Instagram:
-                <a href="https://www.instagram.com/alexandr.turdiyev/">
-                  alexandr.turdiyev
-                </a>
-              </li>
-            </ul>
+            <div class="section__content">
+              <ul class="section__list">
+                <li class="section__list-item">
+                  E-mail:
+                  <a href="mailto:alexandr.turdiyev@gmail.com">
+                    alexandr.turdiyev@gmail.com
+                  </a>
+                </li>
+                <li class="section__list-item">
+                  WhatsApp:
+                  <a href="whatsapp://send?phone=77057702577&text=Привет">
+                    +7 705 770 25 77
+                  </a>
+                </li>
+                <li class="section__list-item">
+                  Telegram:
+                  <a href="https://t.me/alexandr_turdiyev">
+                    @alexandr_turdiyev
+                  </a>
+                </li>
+                <li class="section__list-item">
+                  Discord:
+                  <a href="https://discordapp.com/users/955026775396741182/">
+                    @alexandr_turdiyev
+                  </a>
+                  /
+                  <a href="https://discordapp.com/users/955026775396741182/">
+                    Alex (@AlexandrTurdiyev)
+                  </a>
+                  - RS SCHOOL Server username
+                </li>
+                <li class="section__list-item">
+                  Instagram:
+                  <a href="https://www.instagram.com/alexandr.turdiyev/">
+                    alexandr.turdiyev
+                  </a>
+                </li>
+              </ul>
+            </div>
           </section>
           <!-- [END] contact -->
         </div>
