feat: add header and footer items and styles and some page styles
- add icons and quote in header
- add icons and links in footer
- add styles
- update .container styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
   </head>
   <body>
     <div class="container">
-      <header class="header"></header>
+      <header class="header">
+        <div class="header__item">
+          <img class="header__img" src="assets/icons/left-samurai-icon.svg" alt="icon-img">
+        </div>
+        <div class="header__item">
+          <p class="header__quote">"Code is a mirror that reflects your passion and effort."</p>
+        </div>
+        <div class="header__item">
+          <img class="header__img" src="assets/icons/right-samurai-icon.svg" alt="icon-img">
+        </div>
+        
+        
+      </header>
       <main class="main cv">
         <div class="sidebar">
           <div class="cv-profile-wrapper">
@@ -292,7 +304,19 @@
           <!-- [END] contact -->
         </div>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__item">
+          <img class="footer__img" src="assets/icons/github-icon.svg" alt="github-icon-img" >
+          <a class="footer__link" href="https://github.com/AlexandrTurdiyev" target="_blank"></a>
+        </div>
+        <div class="footer__item">
+          <a class="footer__link-year" href="#">2024</a>
+        </div>
+        <div class="footer__item">
+          <img class="footer__img" src="assets/icons/rs-school-logo.svg" alt="rs-school-logo-img" >
+          <a class="footer__link" href="https://rs.school/courses/javascript-ru" target="_blank"></a>
+        </div>
+      </footer>
     </div>
     <!-- [END] .container -->
   </body>
