feat: update section links
- add classes for section links
- add hover styles for section links

--- a/index.html
+++ b/index.html
@@ -276,36 +276,36 @@
               <ul class="section__list">
                 <li class="section__list-item">
                   E-mail:
-                  <a href="mailto:alexandr.turdiyev@gmail.com">
+                  <a class="section__link" href="mailto:alexandr.turdiyev@gmail.com">
                     alexandr.turdiyev@gmail.com
                   </a>
                 </li>
                 <li class="section__list-item">
                   WhatsApp:
-                  <a href="whatsapp://send?phone=77057702577&text=Привет">
+                  <a class="section__link" href="whatsapp://send?phone=77057702577&text=Привет">
                     +7 705 770 25 77
                   </a>
                 </li>
                 <li class="section__list-item">
                   Telegram:
-                  <a href="https://t.me/alexandr_turdiyev">
+                  <a class="section__link" href="https://t.me/alexandr_turdiyev">
                     @alexandr_turdiyev
                   </a>
                 </li>
                 <li class="section__list-item">
                   Discord:
-                  <a href="https://discordapp.com/users/955026775396741182/">
+                  <a class="section__link" href="https://discordapp.com/users/955026775396741182/">
                     @alexandr_turdiyev
                   </a>
                   /
-                  <a href="https://discordapp.com/users/955026775396741182/">
+                  <a class="section__link" href="https://discordapp.com/users/955026775396741182/">
                     Alex (@AlexandrTurdiyev)
                   </a>
                   - RS SCHOOL Server username
                 </li>
                 <li class="section__list-item">
                   Instagram:
-                  <a href="https://www.instagram.com/alexandr.turdiyev/">
+                  <a class="section__link" href="https://www.instagram.com/alexandr.turdiyev/">
                     alexandr.turdiyev
                   </a>
                 </li>
