fest: update section links
- add link to farizmamedovinteriors.com
- add underlines for section links

--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
                 </li>
                 <li class="section__list-item">
                   <b>Developed</b> and <b>published</b> the <b>website</b>
-                  https://farizmamedovinteriors.com.
+                  <a class="section__link" href="https://farizmamedovinteriors.com">farizmamedovinteriors.com</a>.
                 </li>
                 <li class="section__list-item">
                   <b>Example code</b> for the background slider image transition
                   on the main page of the website
-                  https://farizmamedovinteriors.com:<br />
+                  <a class="section__link" href="https://farizmamedovinteriors.com">farizmamedovinteriors.com</a>:<br />
                   <div class="code-wrapper">
                     <code>
                       function switchImage() {<br />
