--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
         </div>
       </footer>
     </div>
-    <!-- [END] .container -->
+    <!-- [END] .container -->\
+     <script src="main.js"></script>
   </body>
 </html>
