--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
             </div>
             <h1 class="cv-title cv__profile-name">Alexandr Turdiyev</h1>
           </div>
-          <nav class="nav">
-            <ul class="nav__list">
+          <nav class="nav burger">
+            <a class="burger__icon-link" href="#">
+                <span class="burger__icon"></span>
+            </a>
+            <ul class="nav__list burger__list">
               <li class="nav__item">
                 <a href="#about" class="nav__link">About</a>
               </li>
