feat: add button to top with styles and functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <div class="container">
+      <button class="scroll-to-top-btn">
+        <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g clip-path="url(#clip0_6_9)">
+          <path d="M24.8547 6.38034C24.6012 5.87322 23.7771 5.87322 23.5235 6.38034C21.3683 10.3105 19.4032 14.3041 18.2622 18.6146C18.1354 19.2485 18.8327 19.8824 19.4032 19.5021C20.671 18.6146 21.7486 17.537 22.6995 16.2692C22.4459 25.1438 21.2415 34.3354 23.3334 43.0832C23.4601 43.7171 24.5377 43.5903 24.4743 42.9563C23.3334 33.8915 24.2208 24.8901 24.3475 15.8254C25.4251 16.7762 26.5028 17.7271 27.517 18.6779C27.9607 19.1216 28.9117 18.8681 28.8483 18.1074C28.3411 13.9238 26.9465 9.99357 24.8547 6.38034ZM24.1574 13.9238C23.7771 13.3532 22.6995 13.48 22.6995 14.3675V14.4943C21.9388 15.2549 21.2415 16.0156 20.4174 16.7763C21.4317 13.8604 22.6995 11.1346 24.1573 8.40882C25.4251 10.881 26.376 13.4166 26.8831 16.1424C26.1858 15.5085 25.4251 14.8746 24.7277 14.1773C24.6012 13.9238 24.3475 13.8604 24.1574 13.9238Z" fill="black"/>
+          </g>
+          <defs>
+          <clipPath id="clip0_6_9">
+          <rect width="48" height="48" fill="white" transform="translate(0.24707)"/>
+          </clipPath>
+          </defs>
+        </svg>                    
+      </button>
       <header class="header">
         <div class="header__item">
           <img
