feat: add color-profile photo and transition styles

--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
           <div class="cv-profile-wrapper">
             <div class="cv__photo-frame">
               <img
-                class="cv__photo-img"
-                src="assets/images/alexandr-turdiyev_photo_256px.jpg"
+                class="cv__photo-img cv__bw-photo"
+                src="assets/images/alexandr-turdiyev_photo_256px_bw.jpg"
                 alt="photo-img"
               />
+              <img
+              class="cv__photo-img cv__color-photo"
+              src="assets/images/alexandr-turdiyev_photo_256px.jpg"
+              alt="photo-img"
+              />  
             </div>
             <h1 class="cv-title cv__profile-name">Alexandr Turdiyev</h1>
           </div>
