--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexandr Turdiyev</title>
     <link rel="icon" href="favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="favicon-16x16.png" sizes="16x16" type="image/png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
       <button class="scroll-to-top-btn">
-        <svg width="49" height="48" viewBox="0 0 49 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <svg
+          width="49"
+          height="48"
+          viewBox="0 0 49 48"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
           <g clip-path="url(#clip0_6_9)">
-          <path d="M24.8547 6.38034C24.6012 5.87322 23.7771 5.87322 23.5235 6.38034C21.3683 10.3105 19.4032 14.3041 18.2622 18.6146C18.1354 19.2485 18.8327 19.8824 19.4032 19.5021C20.671 18.6146 21.7486 17.537 22.6995 16.2692C22.4459 25.1438 21.2415 34.3354 23.3334 43.0832C23.4601 43.7171 24.5377 43.5903 24.4743 42.9563C23.3334 33.8915 24.2208 24.8901 24.3475 15.8254C25.4251 16.7762 26.5028 17.7271 27.517 18.6779C27.9607 19.1216 28.9117 18.8681 28.8483 18.1074C28.3411 13.9238 26.9465 9.99357 24.8547 6.38034ZM24.1574 13.9238C23.7771 13.3532 22.6995 13.48 22.6995 14.3675V14.4943C21.9388 15.2549 21.2415 16.0156 20.4174 16.7763C21.4317 13.8604 22.6995 11.1346 24.1573 8.40882C25.4251 10.881 26.376 13.4166 26.8831 16.1424C26.1858 15.5085 25.4251 14.8746 24.7277 14.1773C24.6012 13.9238 24.3475 13.8604 24.1574 13.9238Z" fill="black"/>
+            <path
+              d="M24.8547 6.38034C24.6012 5.87322 23.7771 5.87322 23.5235 6.38034C21.3683 10.3105 19.4032 14.3041 18.2622 18.6146C18.1354 19.2485 18.8327 19.8824 19.4032 19.5021C20.671 18.6146 21.7486 17.537 22.6995 16.2692C22.4459 25.1438 21.2415 34.3354 23.3334 43.0832C23.4601 43.7171 24.5377 43.5903 24.4743 42.9563C23.3334 33.8915 24.2208 24.8901 24.3475 15.8254C25.4251 16.7762 26.5028 17.7271 27.517 18.6779C27.9607 19.1216 28.9117 18.8681 28.8483 18.1074C28.3411 13.9238 26.9465 9.99357 24.8547 6.38034ZM24.1574 13.9238C23.7771 13.3532 22.6995 13.48 22.6995 14.3675V14.4943C21.9388 15.2549 21.2415 16.0156 20.4174 16.7763C21.4317 13.8604 22.6995 11.1346 24.1573 8.40882C25.4251 10.881 26.376 13.4166 26.8831 16.1424C26.1858 15.5085 25.4251 14.8746 24.7277 14.1773C24.6012 13.9238 24.3475 13.8604 24.1574 13.9238Z"
+              fill="black"
+            />
           </g>
           <defs>
-          <clipPath id="clip0_6_9">
-          <rect width="48" height="48" fill="white" transform="translate(0.24707)"/>
-          </clipPath>
+            <clipPath id="clip0_6_9">
+              <rect
+                width="48"
+                height="48"
+                fill="white"
+                transform="translate(0.24707)"
+              />
+            </clipPath>
           </defs>
-        </svg>                    
+        </svg>
       </button>
       <header class="header">
         <div class="header__item">
@@ -30,7 +44,7 @@
             class="header__img"
             src="assets/icons/left-samurai-icon.svg"
             alt="icon-img"
-          />
+          >
         </div>
         <div class="header__item">
           <p class="header__quote">
@@ -42,7 +56,7 @@
             class="header__img"
             src="assets/icons/right-samurai-icon.svg"
             alt="icon-img"
-          />
+          >
         </div>
       </header>
       <main class="main cv">
@@ -53,18 +67,18 @@
                 class="cv__photo-img cv__bw-photo"
                 src="assets/images/alexandr-turdiyev_photo_256px_bw.jpg"
                 alt="photo-img"
-              />
+              >
               <img
-              class="cv__photo-img cv__color-photo"
-              src="assets/images/alexandr-turdiyev_photo_256px.jpg"
-              alt="photo-img"
-              />  
+                class="cv__photo-img cv__color-photo"
+                src="assets/images/alexandr-turdiyev_photo_256px.jpg"
+                alt="photo-img"
+              >
             </div>
             <h1 class="cv-title cv__profile-name">Alexandr Turdiyev</h1>
           </div>
           <nav class="nav burger">
             <a class="burger__icon-link" href="#">
-                <span class="burger__icon"></span>
+              <span class="burger__icon"></span>
             </a>
             <ul class="nav__list burger__list">
               <li class="nav__item">
@@ -232,24 +246,32 @@
                 </li>
                 <li class="section__list-item">
                   <b>Developed</b> and <b>published</b> the <b>website</b>
-                  <a class="section__link" href="https://farizmamedovinteriors.com">farizmamedovinteriors.com</a>.
+                  <a
+                    class="section__link"
+                    href="https://farizmamedovinteriors.com"
+                    >farizmamedovinteriors.com</a
+                  >.
                 </li>
                 <li class="section__list-item">
                   <b>Example code</b> for the background slider image transition
                   on the main page of the website
-                  <a class="section__link" href="https://farizmamedovinteriors.com">farizmamedovinteriors.com</a>:<br />
+                  <a
+                    class="section__link"
+                    href="https://farizmamedovinteriors.com"
+                    >farizmamedovinteriors.com</a
+                  >:<br>
                   <div class="code-wrapper">
                     <code>
-                      function switchImage() {<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;images[currentIndex]<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.classList<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.remove('bg-slider__img--active');<br />
+                      function switchImage() {<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;images[currentIndex]<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.classList<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.remove('bg-slider__img--active');<br>
                       &nbsp;&nbsp;&nbsp;&nbsp;currentIndex = (currentIndex + 1)
-                      % images.length;<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;images[currentIndex]<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.classList<br />
-                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.add('bg-slider__img--active');<br />
-                      } setInterval(switchImage, delay);<br />
+                      % images.length;<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;images[currentIndex]<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.classList<br>
+                      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;.add('bg-slider__img--active');<br>
+                      } setInterval(switchImage, delay);<br>
                     </code>
                   </div>
                   This code snippet demonstrates the functionality for changing
@@ -300,36 +322,54 @@
               <ul class="section__list">
                 <li class="section__list-item">
                   E-mail:
-                  <a class="section__link" href="mailto:alexandr.turdiyev@gmail.com">
+                  <a
+                    class="section__link"
+                    href="mailto:alexandr.turdiyev@gmail.com"
+                  >
                     alexandr.turdiyev@gmail.com
                   </a>
                 </li>
                 <li class="section__list-item">
                   WhatsApp:
-                  <a class="section__link" href="whatsapp://send?phone=77057702577&text=Привет">
+                  <a
+                    class="section__link"
+                    href="whatsapp://send?phone=77057702577&text=Привет"
+                  >
                     +7 705 770 25 77
                   </a>
                 </li>
                 <li class="section__list-item">
                   Telegram:
-                  <a class="section__link" href="https://t.me/alexandr_turdiyev">
+                  <a
+                    class="section__link"
+                    href="https://t.me/alexandr_turdiyev"
+                  >
                     @alexandr_turdiyev
                   </a>
                 </li>
                 <li class="section__list-item">
                   Discord:
-                  <a class="section__link" href="https://discordapp.com/users/955026775396741182/">
+                  <a
+                    class="section__link"
+                    href="https://discordapp.com/users/955026775396741182/"
+                  >
                     @alexandr_turdiyev
                   </a>
                   /
-                  <a class="section__link" href="https://discordapp.com/users/955026775396741182/">
+                  <a
+                    class="section__link"
+                    href="https://discordapp.com/users/955026775396741182/"
+                  >
                     Alex (@AlexandrTurdiyev)
                   </a>
                   - RS SCHOOL Server username
                 </li>
                 <li class="section__list-item">
                   Instagram:
-                  <a class="section__link" href="https://www.instagram.com/alexandr.turdiyev/">
+                  <a
+                    class="section__link"
+                    href="https://www.instagram.com/alexandr.turdiyev/"
+                  >
                     alexandr.turdiyev
                   </a>
                 </li>
@@ -577,10 +617,11 @@
                     <path
                       id="backgroundJS"
                       d="M105.604 25.5409C112.101 20.6451 114.104 12.3458 110.079 7.004C106.053 1.66219 97.5234 1.30068 91.0267 6.19654C84.5299 11.0924 82.5265 19.3917 86.552 24.7335C90.5775 30.0753 99.1074 30.4368 105.604 25.5409Z"
-                      stroke="black" 
+                      stroke="black"
                       stroke-width="4"
                       stroke-miterlimit="10"
-                    /> <!-- заддний фон JS -->
+                    />
+                    <!-- заддний фон JS -->
                     <path
                       d="M91.7445 14.3322L94.0826 12.6956L96.9584 16.7871C97.4494 17.4418 97.8235 18.1432 98.104 18.9148C98.2677 19.4993 98.2209 20.1305 97.9871 20.6917C97.6832 21.3931 97.1922 21.9776 96.5375 22.3984C95.766 22.9362 95.1113 23.2401 94.5502 23.3337C94.0124 23.4272 93.4513 23.3337 92.9369 23.0999C92.3758 22.8193 91.8848 22.4218 91.5107 21.9075L93.5215 20.037C93.6851 20.2942 93.8955 20.528 94.1294 20.7151C94.293 20.832 94.4801 20.9021 94.6905 20.9021C94.8541 20.9021 95.0178 20.832 95.1347 20.7384C95.3685 20.5981 95.5322 20.3176 95.5088 20.037C95.4387 19.6396 95.275 19.2421 95.0178 18.9381L91.7445 14.3322ZM98.7587 16.9274L100.886 15.244C101.12 15.5246 101.424 15.735 101.751 15.8519C102.219 15.9922 102.71 15.8987 103.107 15.5947C103.388 15.4077 103.622 15.1505 103.715 14.8232C103.856 14.4023 103.622 13.9347 103.201 13.7944C103.131 13.7711 103.061 13.7477 102.991 13.7477C102.71 13.7243 102.219 13.8412 101.494 14.1452C100.302 14.6361 99.3666 14.8232 98.6652 14.753C97.9871 14.6829 97.3558 14.3322 96.9818 13.7477C96.7012 13.3502 96.5609 12.8826 96.5375 12.415C96.5375 11.8773 96.6778 11.3395 96.9818 10.8953C97.426 10.264 97.9637 9.72625 98.6184 9.30541C99.6004 8.62737 100.465 8.30005 101.214 8.30005C101.962 8.30005 102.663 8.65075 103.318 9.37555L101.214 11.0356C100.793 10.4978 99.9978 10.3809 99.4601 10.8018L99.3899 10.8719C99.1561 11.0122 98.9925 11.2226 98.899 11.4798C98.8288 11.6668 98.8756 11.8773 98.9925 12.0409C99.086 12.1578 99.2263 12.2513 99.3899 12.2513C99.577 12.2747 99.9043 12.1812 100.372 11.9708C101.541 11.4798 102.429 11.1992 103.037 11.1057C103.552 11.0122 104.089 11.0589 104.58 11.2694C105.025 11.4564 105.399 11.7837 105.656 12.1812C105.983 12.6488 106.17 13.2099 106.194 13.7944C106.217 14.4023 106.053 14.9868 105.726 15.5012C105.305 16.1325 104.767 16.6702 104.136 17.0911C102.85 17.9795 101.798 18.3536 100.956 18.2133C100.045 18.0731 99.2964 17.6055 98.7587 16.9274Z"
                       fill="black"
@@ -599,6 +640,6 @@
       </footer>
     </div>
     <!-- [END] .container -->\
-     <script src="main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
